"Map with path" 1. use TMap 2. use path finder of TMap(AsyncTask)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,11 @@
             android:label="사용자 설정"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
+        <activity
+            android:name=".MapActivity"
+            android:label="지도"
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
 
     </application>
 
