"path find with Kakao address searching" 경로 찾기를 카카오 웹뷰를 이용하여 실제 길찾기처럼 구현

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,7 +39,11 @@
             android:label="지도"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
-
+        <activity
+            android:name=".DaumWebViewActivity"
+            android:label="웹뷰"
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
     </application>
 
 </manifest>
